<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/leaderboardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/leaderboard"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/leaderboardGameModeToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:checkedButton="@+id/leaderboardFfa"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardFfa"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/free_for_all" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardBr"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/battle_royale" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/leaderboardDifficultyToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:checkedButton="@+id/leaderboardNormal"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardEasy"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/easy" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardNormal"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal" />

            <com.google.android.material.button.MaterialButton
            android:id="@+id/leaderboardHard"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hard" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/leaderboardTimeToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:checkedButton="@+id/leaderboardAllTime"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardToday"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardThisWeek"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/this_week" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/leaderboardAllTime"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_time" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="8dp"
                android:id="@+id/rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/rank"/>

            <TextView
                android:padding="8dp"
                android:id="@+id/usernameLeaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/rank"
                app:layout_constraintEnd_toStartOf="@+id/nbOfWin"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/username"/>

            <TextView
                android:padding="8dp"
                android:id="@+id/nbOfWin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/number_of_wins"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ListView
            android:id="@+id/leaderboardListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/score_item_view"
            android:listSelector="@android:color/transparent"/>

        <TextView
            android:id="@+id/noGamesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_games_recorded_with_these_parameters"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>



</layout>