<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="@dimen/margin_small">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:text="@string/create_lobby"
            android:textAlignment="center"
            android:textSize="@dimen/textSize_bigger"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lobbyNameLayout"
            style="@style/FormEditTextLayout"
            android:layout_width="400dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:hint="@string/game_name"
            app:layout_constraintBottom_toTopOf="@id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lobbyNameText"
                style="@style/FormEditText"
                android:imeOptions="actionGo"
                android:maxLength="@integer/max_auth_input_characters" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancelButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/cancelLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/actionButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/actionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="@{lobbyNameText.text.length() != 0}"
            android:text="@string/createLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>